Bug 462548 - Weather widgets shows non-sensible data values (3276, 3277, 3276.69)
Summary: Weather widgets shows non-sensible data values (3276, 3277, 3276.69)
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Weather (other bugs)
Version First Reported In: 5.27.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-02 14:07 UTC by Schlaefer
Modified: 2023-12-29 22:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.91.90
Sentry Crash Report:


Attachments
widget values are non-sensical (57.35 KB, image/jpeg)
2022-12-02 14:07 UTC, Schlaefer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Schlaefer 2022-12-02 14:07:22 UTC
Created attachment 154227 [details]
widget values are non-sensical

The weather widget shows non-sensible data values (see attached image). Most of them are rounded from 3276.69 (910 m/s is also 3277 km/h).

STEPS TO REPRODUCE

Unclear, it happened for ten minutes and then fixed itself while investigating the issue.

I tested several location from the dwd.de weather provider and it happened to all of them. My guess is that the API wasn't available or delivered an unexpected result for a short time. 

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Kernel Version: 6.0.10-zen2-1-zen (64-bit)
Graphics Platform: Wayland


ADDITIONAL INFORMATION

The forecast information (high and low temperature) were shown fine.
Comment 1 Schlaefer 2023-08-02 17:18:14 UTC
Just as a an additional data point: This happened again for the first time since the initial report yesterday. Two separate devices with two different distributions (Arch and Nixos) were affected for hours. dwd.de as a datasource for the same location.
Comment 2 Mark B 2023-11-12 05:40:42 UTC
Same problem here. Using wetter.com.

Sometimes the values are correct (i.ex: 7 °C), and sometimes they are not (i.ex: 3277 °C). It changes/happens randomly. One moment the values are wrong (3277 °C), a little later they are correct (7 °C), and later it changes again to 3277 °C

This has been going on for more than a year and is the same in the new Plasma 6 alpha.

X11 & Wayland same problem.
kdeplasma-addons : 5.27.80 (stable plasma 5 had the same problem)
Kde plasma: 5.27.80 (stable plasma 5 had the same problem)
Kde frameworks: 5.245.0 (stable frameworks 5 had the same problem)
Qt: 6.6.0 (qt5 had the same problem)
Comment 3 Mark B 2023-11-12 05:43:16 UTC
This was reported with version 5.6.4. I changed it to 5.27.80 as it still isn't fixed in this version (and all the previous versions).
Comment 4 Bug Janitor Service 2023-12-28 17:12:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3729
Comment 5 Ismael Asensio 2023-12-29 22:14:49 UTC
Git commit 79cd057de1649b417234852d6c665d87f958bf22 by Ismael Asensio.
Committed on 29/12/2023 at 18:30.
Pushed by iasensio into branch 'master'.

dataengines/weather: Fix error values showing for DWD

The DWD provider uses a value of 32767 (0x7fff or 0b111111111111111)
to mark some measurements as invalid.

Instead of passing those values down to the DataEngine and the UI,
detect and invalidate them while parsing the source information.
FIXED-IN: 5.91.90

M  +31   -39   dataengines/weather/ions/dwd/ion_dwd.cpp
M  +1    -1    dataengines/weather/ions/dwd/ion_dwd.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/79cd057de1649b417234852d6c665d87f958bf22