dataengines/weather: Fix error values showing for DWD

The DWD provider uses a value of 32767 (0x7fff or 0b111111111111111)
to mark some measurements as invalid.

Instead of passing those values down to the DataEngine and the UI,
detect and invalidate them while parsing the source information.

BUG: 462548
FIXED-IN: 5.91.90